--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 carpentry: "swc"
 
 # Overall title for pages.
-title: "Lesson Title"
+title: "Introduction to Linux"
 
 # Life cycle stage of the lesson
 # possible values: "pre-alpha", "alpha", "beta", "stable"
@@ -21,15 +21,15 @@ life_cycle: "pre-alpha"
 #------------------------------------------------------------
 
 # What kind of thing is this ("workshop" or "lesson")?
-kind: "lesson"
+kind: "workshop"
 
 # Magic to make URLs resolve both locally and on GitHub.
 # See https://help.github.com/articles/repository-metadata-on-github-pages/.
 # Please don't change it: <USERNAME>/<PROJECT> is correct.
-repository: <USERNAME>/<PROJECT>
+repository: clemsonciti/workshop-linux-GY
 
 # Email address, no mailto:
-email: "lngo@clemson.edu"
+email: "gyourga@clemson.edu"
 
 # Sites.
 csc_site: "https://www.palmetto.clemson.edu"
