--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ title: "Introduction to Linux"
 
 # Life cycle stage of the lesson
 # possible values: "pre-alpha", "alpha", "beta", "stable"
-life_cycle: "stable"
+life_cycle: "beta"
 
 #------------------------------------------------------------
 # Generic settings (should not need to change).
@@ -26,14 +26,14 @@ kind: "workshop"
 # Magic to make URLs resolve both locally and on GitHub.
 # See https://help.github.com/articles/repository-metadata-on-github-pages/.
 # Please don't change it: <USERNAME>/<PROJECT> is correct.
-repository: clemsonciti/workshop-linux-GY
+repository: <USERNAME>/<PROJECT>
 
 # Email address, no mailto:
-email: "gyourga@clemson.edu"
+email: "tuev@smu.edu"
 
 # Sites.
-csc_site: "https://www.palmetto.clemson.edu"
-instructor_site: "https://www.palmetto.clemson.edu"
+csc_site: "https://www.smu.edu/OIT/Services/DataScience"
+instructor_site: "https://www.smu.edu/OIT/Services/DataScience"
 
 # Surveys.
 #pre_survey: "https://carpentries.typeform.com/to/wi32rS?slug="
